--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Flixster</string>
+    <string name= "release_date">Release Date:</string>
+
+
+
+
 </resources>
